Выполнен скрипт по заданию module8-task1

--- a/form.html
+++ b/form.html
@@ -417,5 +417,5 @@
 		<div class="success__btn"><a href="#">Закрыть окно</a></div>
 	</div>
   </body>
-    <!-- <script src="js/script.js"></script> -->
+  <script src="js/script.js"></script>
 </html>
