--- a/index.html
+++ b/index.html
@@ -424,6 +424,6 @@
 			</div>
 		</footer>
 	</div>
-      <!-- <script src="js/script.js"></script> -->
+    <script src="js/script-menu.js"></script>
    </body>
 </html>
